# wookie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
LICENSES/: JSONCPP.txt
include/: Engine.h  RenderContext.h  Window.h
include/ecs/: Component.h  World.h
include/wookie/: Engine.h  IsoRenderer.h  RenderContext.h  RenderSystem.h  Renderer.h  Test.h
include/wookie/core/: Engine.h  RenderContext.h  WObject.h  Window.h  sigslot.h
include/wookie/ecs/: GameObject.h  World.h
include/wookie/game/: Renderable.h  Tile.h  Tilemap.h
include/wookie/game/isometric/: Renderable.h
include/wookie/item/: Item.h  ItemManager.h
include/wookie/rendering/: Camera.h  Context.h  RenderContext.h  RenderSystem.h  Renderable.h  Renderer.h
include/wookie/rendering/GL/: GLRenderer.h  GLTileRenderer.h  GLcontext.h  GLrenderer.h  GLutils.h  IsoRenderer.h
include/wookie/rendering/SDL/: Renderer.h  SDLRenderer.h  SDLTileRenderer.h  SDLcontext.h  SDLrenderer.h
include/wookie/resource/: Image.h  Resource.h  ResourceLoader.h  ResourceManager.h
src/: Engine.cpp  Glutils.cpp  Glutils.h  IsoRenderer.cpp  IsoRenderer.h  RenderContext.cpp  RenderSystem.cpp  RenderSystem.h  Renderable.cpp  Renderable.h  Test.h  Window.cpp
src/core/: Engine.cpp  RenderContext.cpp  Window.cpp
src/ecs/: Component.cpp  GameObject.cpp  GameObject.h  System.cpp  System.h  World.cpp
src/game/: Renderable.cpp
src/item/: Item.cpp  ItemManager.cpp
src/rendering/: RenderSystem.cpp  Renderable.cpp
src/rendering/GL/: GLTileRenderer.cpp  GLcontext.cpp  GLrenderer.cpp  GLutils.cpp  IsoRenderer.cpp
src/rendering/SDL/: Renderer.cpp  SDLRenderer.cpp  SDLTileRenderer.cpp  SDLcontext.cpp  SDLrenderer.cpp
src/resource/: Image.cpp  Resource.cpp  ResourceLoader.cpp  ResourceManager.cpp
src/resources/: basic_vs.glsl
tests/: CMakeLists.txt
tests/item/: main.cpp
tests/resource/: main.cpp
tests/resources/: basic_fs.glsl  basic_vs.glsl
tests/resources/set1/: Source  beach.json  grass.json  obj.json
tests/window/: main.cpp
